--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,18 @@ body {
 .advantages-section {
   padding-bottom: 0;
 }
+.advantages {
+  display: flex;
+  flex-wrap: wrap;
+}
+.advantages .item {
+  width: 270px;
+  margin-right: 30px;
+}
+.advantages .item:nth-child(4n) {
+  margin-right: 0;
+}
+
 .advantages .title {
   margin-top: 0;
   margin-bottom: 10px;
@@ -149,20 +161,37 @@ body {
 }
 /*Чем мы занимаемся?*/
 .whatwedo {
+  display: flex;
+  flex-wrap: wrap;
 }
-
+.whatwedo .item {
+  width: 370px;
+  margin-right: 30px;
+}
+.whatwedo .item:nth-child(3n) {
+  margin-right: 0;
+}
 /*Наша команда*/
 .ourteam {
   background-color: #f5f4fa;
 }
 .team {
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+.team .item {
+  width: 270px;
+  margin-right: 30px;
+}
+.team .item:nth-child(4n) {
+  margin-right: 0;
 }
 .team .image {
   margin-top: 0;
   margin-bottom: 30px;
 }
 .team-title {
+  text-align: center;
   margin-top: 0;
   margin-bottom: 10px;
   color: var(--heading-text-color);
@@ -171,6 +200,7 @@ body {
   line-height: 1.19;
 }
 .team .text {
+  text-align: center;
   margin-top: 0;
   margin-bottom: 0;
   font-weight: 400;
