--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,6 @@ body {
   width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
-  outline: 2px solid tomato;
 }
 /*Шапка*/
 .header-container {
@@ -250,6 +249,17 @@ body {
   text-decoration: none;
 }
 /*Portfolio*/
+
+.filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.filter .item + .item {
+  margin-left: 8px;
+}
+
 .filter .button {
   color: var(--heading-text-color);
   background-color: #f5f4fa;
@@ -264,6 +274,24 @@ body {
 .filter .button:focus {
   color: var(--primery-white-color);
   background-color: var(--accent-color);
+}
+
+/*Работы*/
+
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio .item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.portfolio .item:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 .portfolio .title {
   color: var(--heading-text-color);
