--- a/css/styles.css
+++ b/css/styles.css
@@ -284,6 +284,7 @@ body {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+  border: solid 1px #EEEEEE;
 }
 .portfolio .item:nth-child(3n) {
   margin-right: 0;
