--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
 .header-container {
   display: flex;
   align-items: center;
+  border-bottom: 1px solid #ECECEC;
 }
 .nav-flex {
   display: flex;
@@ -284,7 +285,7 @@ body {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  border: solid 1px #EEEEEE;
+  
 }
 .portfolio .item:nth-child(3n) {
   margin-right: 0;
@@ -292,11 +293,8 @@ body {
 .portfolio .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.portfolio .title {
-  margin-top: 20px;
-  margin-left : 24px;
+.portfolio .title {  
   margin-bottom: 4px;
-  margin-right: 24px;
   color: var(--heading-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -306,13 +304,22 @@ body {
 .portfolio .link {
   text-decoration: none;
 }
-.portfolio .text {
-  margin-top: 0;
-  margin-left: 24px;
-  margin-bottom: 20px;
-  margin-right: 24px;
+.portfolio .text {  
   color: var(--primery-text-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
+}
+.card-img{
+  display: block;
+  margin: 0;
+}
+.card-border{
+  padding-top: 20px;
+  padding-right: 24px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  border-right: solid 1px #EEEEEE;
+  border-bottom: solid 1px #EEEEEE;
+  border-left: solid 1px #EEEEEE;
 }
